WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58076
[Qt] Regression :
r83051
Oxygen's lineedits are not rendered properly
https://bugs.webkit.org/show_bug.cgi?id=58076
Summary
[Qt] Regression : r83051 Oxygen's lineedits are not rendered properly
Alexis Menard (darktears)
Reported
2011-04-07 13:43:42 PDT
Go to bugs.webkit.org, all lineedits are invisible. This does not happen with Plastique style. Clicking on them make them appear.
Attachments
Proposed patch.
(1.44 KB, patch)
2011-04-08 05:35 PDT
,
Alexis Menard (darktears)
kling
: review-
Details
Formatted Diff
Diff
V2 with comments taken into account.
(1.56 KB, patch)
2011-04-11 04:54 PDT
,
Alexis Menard (darktears)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexis Menard (darktears)
Comment 1
2011-04-08 04:20:24 PDT
r83051
broke it.
Alexis Menard (darktears)
Comment 2
2011-04-08 05:35:18 PDT
Created
attachment 88804
[details]
Proposed patch. I'm not sure how this patch align with the mobile theme but it fixes the bad issue with Oxygen.
Diego Gonzalez
Comment 3
2011-04-08 07:41:46 PDT
(In reply to
comment #2
)
> Created an attachment (id=88804) [details] > Proposed patch. > > I'm not sure how this patch align with the mobile theme but it fixes the bad issue with Oxygen.
I think we will need a #ifdef :(
Andreas Kling
Comment 4
2011-04-08 11:03:00 PDT
Comment on
attachment 88804
[details]
Proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=88804&action=review
> Source/WebCore/platform/qt/RenderThemeQt.cpp:676 > - if (isPressed(o)) > - panel.state |= QStyle::State_Sunken; > + panel.state |= QStyle::State_Sunken;
Diego is right, this needs to go in an #if USE(QT_MOBILE_THEME) block ;(
Alexis Menard (darktears)
Comment 5
2011-04-11 04:54:45 PDT
Created
attachment 88989
[details]
V2 with comments taken into account.
Andreas Kling
Comment 6
2011-04-11 04:58:20 PDT
Comment on
attachment 88989
[details]
V2 with comments taken into account. r=me, the Sunken state is a mess, but we can't get out of it for Qt4 anyway :/
WebKit Commit Bot
Comment 7
2011-04-11 06:38:15 PDT
Comment on
attachment 88989
[details]
V2 with comments taken into account. Clearing flags on attachment: 88989 Committed
r83437
: <
http://trac.webkit.org/changeset/83437
>
WebKit Commit Bot
Comment 8
2011-04-11 06:38:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug